主页五大方面成绩按钮跳转动画

--- a/USTD_Dev_all/templates/index.html
+++ b/USTD_Dev_all/templates/index.html
@@ -9,7 +9,6 @@
     <meta content="Admin Dashboard" name="description">
     <meta content="Mannatthemes" name="author">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!--    <link rel="shortcut icon" href="https://www.17sucai.com/2022/5/ekow512451/assets/images/favicon.ico">-->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="../static/css/icons.css" rel="stylesheet" type="text/css">
     <link href="../static/css/style.css" rel="stylesheet" type="text/css">
@@ -53,7 +52,7 @@
                     <!-- language-->
                     <li class="list-inline-item dropdown notification-list hide-phone">
                         <a class="nav-link dropdown-toggle arrow-none waves-effect" data-toggle="dropdown"
-                            href="#" role="button" aria-haspopup="false" aria-expanded="false">Chinese
+                           href="#" role="button" aria-haspopup="false" aria-expanded="false">Chinese
                             <img src="../static/picture/chinese_fiag.jpg" class="ml-2" height="16" alt=""></a>
                     </li>
                     <!-- notification-->
@@ -69,25 +68,27 @@
                             </div>
                             <!-- item-->
                             <a href="javascript:void(0);" class="dropdown-item notify-item">
-                            <div class="notify-icon">
-                                <img src="../static/picture/avatar-2.jpg" alt="user-img" class="img-fluid rounded-circle">
-                            </div>
-                            <p class="notify-details">
-                                <b>Charles M. Jones</b>
-                                <small class="text-muted">Dummy text of the printing and typesetting industry.</small>
-                            </p>
+                                <div class="notify-icon">
+                                    <img src="../static/picture/avatar-2.jpg" alt="user-img"
+                                         class="img-fluid rounded-circle">
+                                </div>
+                                <p class="notify-details">
+                                    <b>Charles M. Jones</b>
+                                    <small class="text-muted">Dummy text of the printing and typesetting
+                                        industry.</small>
+                                </p>
                             </a>
-{#                            <!-- item--><a href="javascript:void(0);" class="dropdown-item notify-item">#}
-{#                            <div class="notify-icon"><img src="../static/picture/avatar-3.jpg" alt="user-img"#}
-{#                                                          class="img-fluid rounded-circle"></div>#}
-{#                            <p class="notify-details"><b>Thomas J. Mimms</b><small class="text-muted">You#}
-{#                                have 87 unread messages</small></p>#}
-{#                        </a><!-- item--><a href="javascript:void(0);" class="dropdown-item notify-item">#}
-{#                            <div class="notify-icon"><img src="../static/picture/avatar-4.jpg" alt="user-img"#}
-{#                                                          class="img-fluid rounded-circle"></div>#}
-{#                            <p class="notify-details"><b>Luis M. Konrad</b><small class="text-muted">It is a#}
-{#                                long established fact that a reader will</small></p>#}
-{#                            </a>#}
+                            {#                            <!-- item--><a href="javascript:void(0);" class="dropdown-item notify-item">#}
+                            {#                            <div class="notify-icon"><img src="../static/picture/avatar-3.jpg" alt="user-img"#}
+                            {#                                                          class="img-fluid rounded-circle"></div>#}
+                            {#                            <p class="notify-details"><b>Thomas J. Mimms</b><small class="text-muted">You#}
+                            {#                                have 87 unread messages</small></p>#}
+                            {#                        </a><!-- item--><a href="javascript:void(0);" class="dropdown-item notify-item">#}
+                            {#                            <div class="notify-icon"><img src="../static/picture/avatar-4.jpg" alt="user-img"#}
+                            {#                                                          class="img-fluid rounded-circle"></div>#}
+                            {#                            <p class="notify-details"><b>Luis M. Konrad</b><small class="text-muted">It is a#}
+                            {#                                long established fact that a reader will</small></p>#}
+                            {#                            </a>#}
                             <!-- All-->
                             <a href="javascript:void(0);" class="dropdown-item notify-item border-top">
                                 View All
@@ -313,135 +314,157 @@
             </div>
         </div>
         <!-- end page title end breadcrumb -->
+        {#        <a href="student_score.html">#}
         <div class="rows">
             <div class="col-lg-9">
                 <div class="rows">&emsp;
                     <div class="col-lg-3">
-                        <div class="card">
-                            <div class="card-body">
-                                <div class="icon-contain">
-                                    <div class="row">
-                                        <div class="col-2 align-self-center">
-                                            <i class="fas fa-tasks text-gradient-success">
+                        <div class="downloadImg">
+                            <a href="student_score.html">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <div class="icon-contain">
+                                            <div class="row">
+                                                <div class="col-2 align-self-center">
+                                                    <i class="fas fa-tasks text-gradient-success">
 
-                                            </i>
-                                        </div>
-                                        <div class="col-10 text-right">
-                                            <h5 class="mt-0 mb-1">{{ s1 }}分</h5>
-                                            <p class="mb-0 font-12 text-muted">专业技术能力</p>
+                                                    </i>
+                                                </div>
+                                                <div class="col-10 text-right">
+                                                    <h5 class="mt-0 mb-1">{{ s1 }}分</h5>
+                                                    <p class="mb-0 font-12 text-muted">专业技术能力</p>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </a>
                         </div>
                     </div>&emsp;
                     <div class="col-lg-3">
-                        <div class="card">
-                            <div class="card-body justify-content-center">
-                                <div class="icon-contain">
-                                    <div class="row">
-                                        <div class="col-2 align-self-center">
-                                            <i class="far fa-gem text-gradient-danger">
+                        <div class="downloadImg">
+                            <a href="student_score.html">
+                                <div class="card">
+                                    <div class="card-body justify-content-center">
+                                        <div class="icon-contain">
+                                            <div class="row">
+                                                <div class="col-2 align-self-center">
+                                                    <i class="far fa-gem text-gradient-danger">
 
-                                            </i>
-                                        </div>
-                                        <div class="col-10 text-right">
-                                            <h5 class="mt-0 mb-1">{{ s2 }}分</h5>
-                                            <p class="mb-0 font-12 text-muted">创新创业能力</p>
+                                                    </i>
+                                                </div>
+                                                <div class="col-10 text-right">
+                                                    <h5 class="mt-0 mb-1">{{ s2 }}分</h5>
+                                                    <p class="mb-0 font-12 text-muted">创新创业能力</p>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </a>
                         </div>
                     </div>&emsp;
                     <div class="col-lg-3">
-                        <div class="card">
-                            <div class="card-body">
-                                <div class="icon-contain">
-                                    <div class="row">
-                                        <div class="col-2 align-self-center">
-                                            <i class="fas fa-users text-gradient-warning">
+                        <div class="downloadImg">
+                            <a href="student_score.html">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <div class="icon-contain">
+                                            <div class="row">
+                                                <div class="col-2 align-self-center">
+                                                    <i class="fas fa-users text-gradient-warning">
 
-                                            </i>
-                                        </div>
-                                        <div class="col-10 text-right">
-                                            <h5 class="mt-0 mb-1">{{ s3 }}分</h5>
-                                            <p class="mb-0 font-12 text-muted">知识学习能力</p>
+                                                    </i>
+                                                </div>
+                                                <div class="col-10 text-right">
+                                                    <h5 class="mt-0 mb-1">{{ s3 }}分</h5>
+                                                    <p class="mb-0 font-12 text-muted">知识学习能力</p>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </a>
                         </div>
                     </div>&emsp;
                     <div class="col-lg-3">
-                        <div class="card ">
-                            <div class="card-body">
-                                <div class="icon-contain">
-                                    <div class="row">
-                                        <div class="col-2 align-self-center">
-                                            <i class="fas fa-database text-gradient-primary">
+                        <div class="downloadImg">
+                            <a href="student_score.html">
+                                <div class="card ">
+                                    <div class="card-body">
+                                        <div class="icon-contain">
+                                            <div class="row">
+                                                <div class="col-2 align-self-center">
+                                                    <i class="fas fa-database text-gradient-primary">
 
-                                            </i>
-                                        </div>
-                                        <div class="col-10 text-right">
-                                            <h5 class="mt-0 mb-1">{{ s4 }}分</h5>
-                                            <p class="mb-0 font-12 text-muted">管理实践能力</p>
+                                                    </i>
+                                                </div>
+                                                <div class="col-10 text-right">
+                                                    <h5 class="mt-0 mb-1">{{ s4 }}分</h5>
+                                                    <p class="mb-0 font-12 text-muted">管理实践能力</p>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </a>
                         </div>
                     </div>&emsp;
                     <div class="col-lg-3">
-                        <div class="card">
-                            <div class="card-body">
-                                <div class="icon-contain">
-                                    <div class="row">
-                                        <div class="col-2 align-self-center">
-                                            <i class="fas fa-tasks text-gradient-success">
+                        <div class="downloadImg">
+                            <a href="student_score.html">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <div class="icon-contain">
+                                            <div class="row">
+                                                <div class="col-2 align-self-center">
+                                                    <i class="fas fa-tasks text-gradient-success">
 
-                                            </i>
-                                        </div>
-                                        <div class="col-10 text-right">
-                                            <h5 class="mt-0 mb-1">{{ s5 }}分</h5>
-                                            <p class="mb-0 font-12 text-muted">综合发展能力</p>
+                                                    </i>
+                                                </div>
+                                                <div class="col-10 text-right">
+                                                    <h5 class="mt-0 mb-1">{{ s5 }}分</h5>
+                                                    <p class="mb-0 font-12 text-muted">综合发展能力</p>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        {#        </a>#}
         <div class="row">
             <div class="col-lg-9">
                 <div class="card">
                     <div class="card-body">
                         <h5 class="header-title mb-4 mt-0">成绩雷达图对比</h5>
-                            <img height="100%" width="100%" src="/static/image/1.png"/>
+                        <img height="100%" width="100%" src="/static/image/1.png"/>
 
                     </div>
                 </div>
             </div>
 
             <div class="col-lg-3">
-            <div class="card ">
-                            <div class="card-body" >
-                                <div class="icon-contain">
-                                    <div class="row">
-                                        <div class="col-2 align-self-center">
-                                            <i class="fas fa-database text-gradient-primary">
-                                            </i>
-                                        </div>
-                                        <div class="col-10 text-right" >
-                                            <h1 style="color:red"  class="mt-0 mb-1" >{{ overallgrade }}分</h1>
-                                            <p style="color:blue" class="mb-0 font-32 text-muted" >综合素质测评总分</p>
-                                        </div>
-                                    </div>
+                <div class="card ">
+                    <div class="card-body">
+                        <div class="icon-contain">
+                            <div class="row">
+                                <div class="col-2 align-self-center">
+                                    <i class="fas fa-database text-gradient-primary">
+                                    </i>
+                                </div>
+                                <div class="col-10 text-right">
+                                    <h1 style="color:red" class="mt-0 mb-1">{{ overallgrade }}分</h1>
+                                    <p style="color:blue" class="mb-0 font-32 text-muted">综合素质测评总分</p>
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </div>
                 <div class="card">
                     <div class="card-body">
                         <div class="dropdown d-inline-block float-right">
@@ -647,10 +670,15 @@
 <!-- App js -->
 <script src="/static/js/app.js">
 </script>
-<div style="display:none;">
-    <!--    <a href="https://smalltool.github.io/">扒站工具</a>-->
-</div>
 </body>
+<script>
+    $(".downloadImg").click(function () {
+        $(this).css("transform", "scale(0.95)");//点击class类名未downloadImg 元素后 改变他的css值，使他整体缩小
+        setTimeout(function () {
+            $(".downloadImg").css("transform", "scale(1)");
+        }, 100);//我们只需要在这里写个延迟加载就ok了，点击一次先执行 缩放 在 延迟100毫秒在执行复原
+    })
+</script>
 </html>
 <script src="/static/js/console-ban.min.js">
 </script>
