主页增加排名展示

--- a/USTD_Dev_all/templates/index.html
+++ b/USTD_Dev_all/templates/index.html
@@ -334,7 +334,7 @@
                                                     </i>
                                                 </div>
                                                 <div class="col-10 text-right">
-                                                    <h5 class="mt-0 mb-1">{{ s1 }}分</h5>
+                                                    <h5 class="mt-0 mb-1">{{ s1 }}分/第{{ mt_rank }}名</h5>
                                                     <p class="mb-0 font-12 text-muted">专业技术能力</p>
                                                 </div>
                                             </div>
@@ -357,7 +357,7 @@
                                                     </i>
                                                 </div>
                                                 <div class="col-10 text-right">
-                                                    <h5 class="mt-0 mb-1">{{ s2 }}分</h5>
+                                                    <h5 class="mt-0 mb-1">{{ s2 }}分/第{{ it_rank }}名</h5>
                                                     <p class="mb-0 font-12 text-muted">创新创业能力</p>
                                                 </div>
                                             </div>
@@ -380,7 +380,7 @@
                                                     </i>
                                                 </div>
                                                 <div class="col-10 text-right">
-                                                    <h5 class="mt-0 mb-1">{{ s3 }}分</h5>
+                                                    <h5 class="mt-0 mb-1">{{ s3 }}分/第{{ ln_rank }}名</h5>
                                                     <p class="mb-0 font-12 text-muted">知识学习能力</p>
                                                 </div>
                                             </div>
@@ -403,7 +403,7 @@
                                                     </i>
                                                 </div>
                                                 <div class="col-10 text-right">
-                                                    <h5 class="mt-0 mb-1">{{ s4 }}分</h5>
+                                                    <h5 class="mt-0 mb-1">{{ s4 }}分/第{{ mg_rank }}名</h5>
                                                     <p class="mb-0 font-12 text-muted">管理实践能力</p>
                                                 </div>
                                             </div>
@@ -426,7 +426,7 @@
                                                     </i>
                                                 </div>
                                                 <div class="col-10 text-right">
-                                                    <h5 class="mt-0 mb-1">{{ s5 }}分</h5>
+                                                    <h5 class="mt-0 mb-1">{{ s5 }}分/第{{ cd_rank }}名</h5>
                                                     <p class="mb-0 font-12 text-muted">综合发展能力</p>
                                                 </div>
                                             </div>
